<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hide"
            android:icon="@drawable/locked"
            android:title="@string/menu_hide" />
        <item
            android:id="@+id/nav_expose"
            android:icon="@drawable/unlocked"
            android:title="@string/menu_expose" />
        <item
            android:id="@+id/nav_key_exchange"
            android:icon="@drawable/exchange"
            android:title="@string/menu_key_exchange" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>