<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_hide">

    <fragment
        android:id="@+id/nav_hide"
        android:name="com.steganomaster.steganomaster.ui.hide.HideFragment"
        android:label="@string/menu_hide"
        tools:layout="@layout/fragment_hide" />

    <fragment
        android:id="@+id/nav_expose"
        android:name="com.steganomaster.steganomaster.ui.expose.ExposeFragment"
        android:label="@string/menu_expose"
        tools:layout="@layout/fragment_expose" />

    <fragment
        android:id="@+id/nav_key_exchange"
        android:name="com.steganomaster.steganomaster.ui.key_exchange.KeyExchangeFragment"
        android:label="@string/menu_key_exchange"
        tools:layout="@layout/fragment_key_exchange" />

    <fragment
        android:id="@+id/nav_key_vault"
        android:name="com.steganomaster.steganomaster.ui.key_vault.KeyVaultFragment"
        android:label="@string/menu_key_vault"
        tools:layout="@layout/fragment_key_vault" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.steganomaster.steganomaster.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.steganomaster.steganomaster.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>